# pipenv-issue-6068-demo

./: .gitignore  pyproject.toml
src/problem_package/: main.py
