[build-system]
requires = [
    "setuptools~=68.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "problem-project"
requires-python = "~=3.10.11"
dependencies = []
dynamic = ["version"]

[project.scripts]
problem_package = "problem_package.main:run"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
